extends Route


func _on_quit_button_pressed() -> void:
    pass # Replace with function body.


func _on_reset_vehicle_button_pressed() -> void:
    pass # Replace with function body.


func _on_resume_button_pressed() -> void:
    pass # Replace with function body.


func _on_settings_button_pressed() -> void:
    route_to($"SubRoutes/SettingsMenu")
